hphp/test/zend/bad/ext-gd/imagefilter_error8.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_SELECTIVE_BLUR));
?>